# softadastra_backend

./: .env  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  build_dev.sh  build_prod.sh  clean.sh  run.sh  run_tests.sh
Crow/include/: crow.h
Crow/include/crow/: http_request.h  http_server.h
config/data/: all_categories.json  all_cities.json  all_colors.json  all_sizes.json  products.json  top_level_categories.json
include/adastra/ai/: AI.hpp
include/adastra/config/: Config.hpp
include/adastra/config/env/: EnvBoot.hpp  EnvLoader.hpp
include/adastra/config/manage/: ConfigManager.hpp
include/adastra/core/: Core.hpp
include/adastra/core/algorithms/: Search.hpp
include/adastra/core/interfaces/: JsonSerializable.hpp
include/adastra/core/repository/: JsonRepository.hpp
include/adastra/crypto/: Crypto.hpp
include/adastra/database/: Database.hpp
include/adastra/network/: Network.hpp
include/adastra/network/p2p/algorithms/: P2PAlgorithms.hpp
include/adastra/storage/: Storage.hpp
include/adastra/test_utils/: TestUtils.hpp
include/adastra/tools/: Tools.hpp
include/adastra/utils/: Utils.hpp
include/adastra/utils/json/: JsonFileLoader.hpp  JsonUtils.hpp
include/adastra/utils/string/: StringUtils.hpp
include/softadastra/box/: BoxModule.hpp
include/softadastra/chat/: ChatModule.hpp
include/softadastra/commerce/categories/: Category.hpp  CategoryBuilder.hpp  CategoryCache.hpp  CategoryController.hpp  CategoryFactory.hpp  CategoryJsonParser.hpp  CategoryRepository.hpp  CategoryRepositoryJson.hpp  CategoryService.hpp  CategoryServiceFromCache.hpp
include/softadastra/commerce/cities/: City.hpp  CityCache.hpp  CityController.hpp  CityRepositoryJson.hpp  CityService.hpp
include/softadastra/commerce/colors/: Color.hpp  ColorBuilder.hpp  ColorCache.hpp  ColorController.hpp  ColorRepository.hpp  ColorRepositoryJson.hpp  ColorService.hpp  ColorServiceFromCache.hpp
include/softadastra/commerce/product/: DigitalProduct.hpp  Product.hpp  ProductBuilder.hpp  ProductCache.hpp  ProductController.hpp  ProductFactory.hpp  ProductWithPromo.hpp  product_routes.hpp
include/softadastra/commerce/products/: AmbassadorService.hpp  DigitalProduct.hpp  Product.hpp  ProductBuilder.hpp  ProductCache.hpp  ProductController.hpp  ProductFactory.hpp  ProductRecommender.hpp  ProductRepository.hpp  ProductRepositorySQL.hpp  ProductService.hpp  ProductServiceFromSQL.hpp  ProductValidator.hpp  ProductWithPromo.hpp
include/softadastra/commerce/sizes/: Size.hpp  SizeCache.hpp  SizeController.hpp  SizeRepositoryJson.hpp  SizeService.hpp  SizeServiceFromCache.hpp
include/softadastra/core/cache/: GenericCache.hpp
include/softadastra/pay/: PayModule.hpp
include/softadastra/shop/: ShopManager.hpp
lib/: CMakeLists.txt
lib/adastra/: CMakeLists.txt
lib/adastra/ai/: CMakeLists.txt
lib/adastra/config/: CMakeLists.txt
lib/adastra/config/env/: EnvBoot.cpp
lib/adastra/config/manage/: ConfigManager.cpp
lib/adastra/core/: CMakeLists.txt
lib/adastra/core/algorithms/: Search.cpp
lib/adastra/crypto/: CMakeLists.txt
lib/adastra/database/: CMakeLists.txt  Database.cpp
lib/adastra/network/: CMakeLists.txt
lib/adastra/network/p2p/algorithms/: P2PAlgorithms.cpp
lib/adastra/storage/: CMakeLists.txt
lib/adastra/test_utils/: CMakeLists.txt
lib/adastra/tools/: CMakeLists.txt
lib/adastra/tools/logging/: Logger.cpp
lib/adastra/utils/: CMakeLists.txt
lib/adastra/utils/string/: StringUtils.cpp
lib/softadastra/: CMakeLists.txt
lib/softadastra/commerce/categories/: CategoryController.cpp  CategoryRepository.cpp  CategoryRepositoryJson.cpp  CategoryService.cpp  CategoryServiceFromCache.cpp
lib/softadastra/commerce/cities/: CityController.cpp  CityRepositoryJson.cpp  CityService.cpp
lib/softadastra/commerce/colors/: ColorController.cpp  ColorRepositoryJson.cpp  ColorService.cpp  ColorServiceFromCache.cpp
lib/softadastra/commerce/product/: DigitalProduct.cpp  Product.cpp  ProductBuilder.cpp  ProductCache.cpp  ProductController.cpp  ProductFactory.cpp  ProductService.cpp  ProductValidator.cpp  ProductWithPromo.cpp  product_routes.cpp
lib/softadastra/commerce/products/: AmbassadorService.cpp  DigitalProduct.cpp  Product.cpp  ProductBuilder.cpp  ProductController.cpp  ProductFactory.cpp  ProductRecommender.cpp  ProductRepositorySQL.cpp  ProductService.cpp  ProductServiceFromSQL.cpp  ProductValidator.cpp  ProductWithPromo.cpp
lib/softadastra/commerce/sizes/: SizeController.cpp  SizeRepositoryJson.cpp  SizeService.cpp
lib/softadastra/core/cache/: GenericCache.cpp
lib/softadastra/shop/: ShopManager.cpp
scripts/: changelog-release.sh  update_changelog.sh
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/integration/: test_product_flow.cpp  test_softadastra.cpp
unittests/: CMakeLists.txt  README.md
unittests/core/: test_search.cpp
unittests/softadastra/: test_pay.cpp
unittests/utils/: test_string.cpp
